appId: com.advay.app
---
- launchApp:
    appId: "com.advay.app"
    clearState: true
    arguments:
      "-EXDevMenuIsOnboardingFinished": true
- runFlow:
    when:
      platform: iOS
    commands:
      - extendedWaitUntil:
          visible: "http://localhost:8081"
          timeout: 60000
      - tapOn: "http://localhost:8081"
- runFlow:
    when:
      platform: Android
    commands:
      - extendedWaitUntil:
          visible: "http://10.0.2.2:8081"
          timeout: 60000
      - tapOn: "http://10.0.2.2:8081"
      - extendedWaitUntil:
          visible: "Continue"
          timeout: 180000
      - tapOn: "Continue"
      - back
- extendedWaitUntil:
    visible:
      id: e2eProxyHeaderInput
    timeout: 180000
- tapOn:
    id: e2eProxyHeaderInput
- inputText: ${output.result}
- pressKey: Enter
